@@ -10,6 +10,18 @@ in the release notes and/or placed into UPDATING.
 
 All ports committers are allowed to commit to this file.
 
+20160416:
+AUTHOR: jbeich@FreeBSD.org
+
+  Introducing CONFIGURE_OUTSOURCE. It changes HAS_CONFIGURE and GNU_CONFIGURE
+  by invoking configure, build and install stage outside of source tree e.g.,
+
+    $ mkdir ../.build
+    $ cd ../.build
+    $ ${OLDPWD}/configure
+    $ gmake
+    $ gmake install
+
 20160402:
 AUTHOR: bapt@FreeBSD.org
 
